--- a/deep_learning_models-oversampling.ipynb
+++ b/deep_learning_models-oversampling.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35707794",
    "metadata": {},
    "outputs": [
@@ -82,13 +82,13 @@
     }
    ],
    "source": [
-    "# Downgrade numpy for TensorFlow compatibility (run this cell and restart kernel)\n",
+    "# Downgrade numpy for TensorFlow compatibility \n",
     "%pip install numpy==1.26.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9d836fd9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,6 @@
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "X = df[features]\n",
-    "# Assuming target column is 'Churn' (update if different)\n",
     "y = df['Churn']"
    ]
   },
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9253b71e",
    "metadata": {},
    "outputs": [
@@ -178,15 +177,15 @@
    ],
    "source": [
     "# Fit preprocessor on ORIGINAL training data (before oversampling)\n",
-    "# This ensures scaling parameters reflect true feature distribution\n",
+    "# ensures scaling parameters reflect true feature distribution\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc = preprocessor.transform(X_val)\n",
     "X_test_proc = preprocessor.transform(X_test)\n",
     "\n",
-    "# Now apply random oversampling to balance classes 50/50 on PREPROCESSED training data\n",
+    "# apply random oversampling to balance classes 50/50 on PREPROCESSED training data\n",
     "from sklearn.utils import resample\n",
     "\n",
-    "# Show class distribution before oversampling\n",
+    "# class distribution before oversampling\n",
     "print(\"Before oversampling:\")\n",
     "print(pd.Series(y_train).value_counts())\n",
     "print(pd.Series(y_train).value_counts(normalize=True))\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8e0901ec",
    "metadata": {},
    "outputs": [
@@ -1147,8 +1146,6 @@
     "tf.config.threading.set_intra_op_parallelism_threads(1)\n",
     "tf.config.threading.set_inter_op_parallelism_threads(1)\n",
     "\n",
-    "# Class weights removed (data already oversampled to balance classes)\n",
-    "\n",
     "class F1EarlyStopping(tf.keras.callbacks.Callback):\n",
     "    def __init__(self, X_val, y_val, patience=5):\n",
     "        super().__init__()\n",
@@ -1256,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "41a1bcb1",
    "metadata": {},
    "outputs": [
@@ -2168,7 +2165,6 @@
    ],
    "source": [
     "# Multi-Layer Perceptron (MLP) with Optuna hyperparameter tuning (F1-based)\n",
-    "# F1EarlyStopping already defined above; class weights removed\n",
     "%pip install tensorflow-macos tensorflow-metal\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, optimizers, losses, metrics\n",
@@ -2183,8 +2179,6 @@
     "    pass\n",
     "tf.config.threading.set_intra_op_parallelism_threads(1)\n",
     "tf.config.threading.set_inter_op_parallelism_threads(1)\n",
-    "\n",
-    "# Class weights removed (data already oversampled to balance classes)\n",
     "\n",
     "class F1EarlyStopping(tf.keras.callbacks.Callback):\n",
     "    def __init__(self, X_val, y_val, patience=5):\n",
