--- a/deep_learning_models-smote+enn.ipynb
+++ b/deep_learning_models-smote+enn.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35707794",
    "metadata": {},
    "outputs": [
@@ -93,14 +93,14 @@
     }
    ],
    "source": [
-    "# Downgrade numpy for TensorFlow compatibility (run this cell and restart kernel)\n",
+    "# Downgrade numpy for TensorFlow compatibility\n",
     "%pip install numpy==1.26.4\n",
     "%pip install imblearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "615e6bce",
    "metadata": {},
    "outputs": [
@@ -154,9 +154,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# ============================================================\n",
-    "# 1. Global deterministic setup (must be at the very top)\n",
-    "# ============================================================\n",
     "\n",
     "SEED = 42\n",
     "\n",
@@ -172,9 +169,6 @@
     "os.environ[\"VECLIB_MAXIMUM_THREADS\"] = \"1\"\n",
     "os.environ[\"NUMEXPR_NUM_THREADS\"] = \"1\"\n",
     "\n",
-    "# ============================================================\n",
-    "# 2. Imports (after env vars)\n",
-    "# ============================================================\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
@@ -184,45 +178,28 @@
     "from imblearn.under_sampling import EditedNearestNeighbours\n",
     "from imblearn.pipeline import Pipeline as ImbPipeline\n",
     "\n",
-    "# (Optional) example model\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# ============================================================\n",
-    "# 3. Load data and define features\n",
-    "# ============================================================\n",
     "\n",
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "\n",
     "X = df[features]\n",
-    "# Update if your target column has a different name\n",
     "y = df['Churn']\n",
     "\n",
     "categorical_cols = ['SeniorCitizen', 'PhoneService', 'TechSupport', 'OnlineSecurity', 'PaperlessBilling', 'PaymentMethod']\n",
     "numerical_cols = [col for col in features if col not in categorical_cols]\n",
     "\n",
-    "# ============================================================\n",
-    "# 4. Preprocessing pipeline (dense, deterministic)\n",
-    "# ============================================================\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numerical_cols),\n",
-    "        # For newer sklearn: sparse_output=False\n",
-    "        # For older: use sparse=False (you may get a warning on one of them, but it will still work)\n",
     "        ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False), categorical_cols)\n",
     "    ],\n",
     "    remainder='drop'\n",
     ")\n",
-    "\n",
-    "# If you get an error about sparse_output, switch to:\n",
-    "# ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse=False), categorical_cols)\n",
-    "\n",
-    "# ============================================================\n",
-    "# 5. Train / val / test split (80 / 10 / 10)\n",
-    "# ============================================================\n",
     "\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
     "    X, y,\n",
@@ -244,29 +221,22 @@
     "    y_val = y_val.map({'No': 0, 'Yes': 1}).astype(int)\n",
     "    y_test = y_test.map({'No': 0, 'Yes': 1}).astype(int)\n",
     "\n",
-    "# ============================================================\n",
-    "# 6. Fit preprocessor ONLY on training, transform all splits\n",
-    "# ============================================================\n",
     "\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc   = preprocessor.transform(X_val)\n",
     "X_test_proc  = preprocessor.transform(X_test)\n",
     "\n",
-    "# Ensure dense float64 (for stable KNN in SMOTE/ENN)\n",
+    "# dense float64 (for stable KNN in SMOTE/ENN)\n",
     "X_train_proc = np.asarray(X_train_proc, dtype=np.float64)\n",
     "X_val_proc   = np.asarray(X_val_proc,   dtype=np.float64)\n",
     "X_test_proc  = np.asarray(X_test_proc,  dtype=np.float64)\n",
-    "\n",
-    "# ============================================================\n",
-    "# 7. SMOTE + ENN on TRAINING DATA ONLY (deterministic)\n",
-    "# ============================================================\n",
     "\n",
     "print(\"Before SMOTE+ENN:\")\n",
     "print(y_train.value_counts())\n",
     "print(\"Class distribution:\")\n",
     "print(y_train.value_counts(normalize=True))\n",
     "\n",
-    "# Explicit SMOTE and ENN with fixed random_state\n",
+    "# SMOTE and ENN with fixed random_state\n",
     "smote = SMOTE(\n",
     "    random_state=SEED,\n",
     "    sampling_strategy='auto',  # oversample minority up to majority\n",
@@ -293,14 +263,13 @@
     "print(\"Class distribution:\")\n",
     "print(y_train_resampled.value_counts(normalize=True))\n",
     "\n",
-    "# Use these for training models\n",
     "X_train_proc = X_train_resampled\n",
     "y_train      = y_train_resampled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8e0901ec",
    "metadata": {},
    "outputs": [
@@ -1227,8 +1196,6 @@
     "tf.config.threading.set_intra_op_parallelism_threads(1)\n",
     "tf.config.threading.set_inter_op_parallelism_threads(1)\n",
     "\n",
-    "# Class weights removed (data already oversampled to balance classes)\n",
-    "\n",
     "class F1EarlyStopping(tf.keras.callbacks.Callback):\n",
     "    def __init__(self, X_val, y_val, patience=5):\n",
     "        super().__init__()\n",
@@ -1336,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "41a1bcb1",
    "metadata": {},
    "outputs": [
@@ -2246,7 +2213,6 @@
    ],
    "source": [
     "# Multi-Layer Perceptron (MLP) with Optuna hyperparameter tuning (F1-based)\n",
-    "# F1EarlyStopping already defined above; class weights removed\n",
     "%pip install tensorflow-macos tensorflow-metal\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, optimizers, losses, metrics\n",
@@ -2262,7 +2228,6 @@
     "tf.config.threading.set_intra_op_parallelism_threads(1)\n",
     "tf.config.threading.set_inter_op_parallelism_threads(1)\n",
     "\n",
-    "# Class weights removed (data already oversampled to balance classes)\n",
     "\n",
     "class F1EarlyStopping(tf.keras.callbacks.Callback):\n",
     "    def __init__(self, X_val, y_val, patience=5):\n",
