--- a/deep_learning_models.ipynb
+++ b/deep_learning_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0fba3f09",
    "metadata": {},
    "outputs": [
@@ -63,13 +63,12 @@
     "os.environ['TF_DETERMINISTIC_OPS'] = '1'\n",
     "os.environ['TF_ENABLE_ONEDNN_OPTS'] = '0'\n",
     "random.seed(SEED)\n",
-    "np.random.seed(SEED)\n",
-    "# Remove optuna.seed(SEED) as it does not exist"
+    "np.random.seed(SEED)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "35707794",
    "metadata": {},
    "outputs": [
@@ -86,13 +85,13 @@
     }
    ],
    "source": [
-    "# Downgrade numpy for TensorFlow compatibility (run this cell and restart kernel)\n",
+    "# Downgrade numpy for TensorFlow compatibility\n",
     "%pip install numpy==1.26.4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9d836fd9",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,6 @@
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "X = df[features]\n",
-    "# Assuming target column is 'Churn' (update if different)\n",
     "y = df['Churn']"
    ]
   },
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8e0901ec",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1106,7 @@
     "        self.best_f1 = -1\n",
     "        self.wait = 0\n",
     "        self.best_weights = None\n",
-    "        self.stopped_epoch = None  # added to record stopping epoch\n",
+    "        self.stopped_epoch = None  # record stopping epoch\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        preds = (self.model.predict(self.X_val, verbose=0).ravel() > 0.5).astype(int)\n",
     "        current_f1 = f1_score(self.y_val, preds)\n",
@@ -1213,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "41a1bcb1",
    "metadata": {},
    "outputs": [
@@ -2125,7 +2123,6 @@
    ],
    "source": [
     "# Multi-Layer Perceptron (MLP) with Optuna hyperparameter tuning (F1-based)\n",
-    "# F1EarlyStopping already defined in previous cell\n",
     "%pip install tensorflow-macos tensorflow-metal\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers, models, optimizers, losses, metrics\n",
@@ -2157,7 +2154,7 @@
     "        self.best_f1 = -1\n",
     "        self.wait = 0\n",
     "        self.best_weights = None\n",
-    "        self.stopped_epoch = None  # added to record stopping epoch\n",
+    "        self.stopped_epoch = None  # record stopping epoch\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        preds = (self.model.predict(self.X_val, verbose=0).ravel() > 0.5).astype(int)\n",
     "        current_f1 = f1_score(self.y_val, preds)\n",
