--- a/models-oversampling.ipynb
+++ b/models-oversampling.ipynb
@@ -5,35 +5,12 @@
    "id": "96e3c905",
    "metadata": {},
    "source": [
-    "# Machine Learning Models Implementation\n",
-    "\n",
-    "This notebook implements several ML models based on the EDA and PCA results. The top 14 features identified after PCA are used for modeling. The workflow includes:\n",
-    "\n",
-    "- Data loading and preprocessing (scaling, one-hot encoding)\n",
-    "- Train/validation/test split (80/10/10)\n",
-    "- Model training and hyperparameter tuning using Optuna\n",
-    "- Models: Logistic Regression (Ridge & Lasso), Naive Bayes, Random Forest, SVM, Decision Tree\n",
-    "\n",
-    "**Top 14 Features:**\n",
-    "1. RiskScore\n",
-    "2. MonthlyCharges\n",
-    "3. AvgChargesPerMonth\n",
-    "4. ContractRisk\n",
-    "5. Contract\n",
-    "6. TotalServices\n",
-    "7. TotalCharges\n",
-    "8. EstimatedCLV\n",
-    "9. HasFamily\n",
-    "10. tenure\n",
-    "11. Partner\n",
-    "12. HighValueCustomer\n",
-    "13. PaymentRisk\n",
-    "14. Dependents"
+    "# Machine Learning Models Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4f229112",
    "metadata": {},
    "outputs": [
@@ -67,7 +44,6 @@
     "# Set constant seed for reproducibility\n",
     "SEED = 42\n",
     "np.random.seed(SEED)\n",
-    "# Remove optuna.seed(SEED) as it does not exist\n",
     "import warnings\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
@@ -114,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "30bb9c57",
    "metadata": {},
    "outputs": [],
@@ -123,7 +99,6 @@
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "X = df[features]\n",
-    "# Assuming target column is 'Churn' (update if different)\n",
     "y = df['Churn']"
    ]
   },
@@ -469,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6adc1cd3",
    "metadata": {},
    "outputs": [
@@ -558,7 +533,7 @@
     }
    ],
    "source": [
-    "# Naive Bayes with Optuna (GaussianNB) and single validation split\n",
+    "# Naive Bayes with Optuna (GaussianNB)\n",
     "from sklearn.metrics import confusion_matrix, roc_auc_score, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -613,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5bd97bfc",
    "metadata": {},
    "outputs": [
@@ -703,7 +678,7 @@
     }
    ],
    "source": [
-    "# Random Forest with Optuna and single validation split\n",
+    "# Random Forest with Optuna\n",
     "from sklearn.metrics import confusion_matrix, roc_auc_score, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -831,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ca8167bb",
    "metadata": {},
    "outputs": [
@@ -922,7 +897,7 @@
     }
    ],
    "source": [
-    "# SVM with Optuna and single validation split, with timeout for each trial\n",
+    "# SVM with Optuna, with timeout for each trial\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import confusion_matrix, roc_auc_score, roc_curve\n",
     "import matplotlib.pyplot as plt\n",
@@ -1240,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "94e91a41",
    "metadata": {},
    "outputs": [
@@ -1337,8 +1312,6 @@
     }
    ],
    "source": [
-    "# XGBoost, LightGBM, and KNN with Optuna, validation split, and plots\n",
-    "# Install required packages if not already installed\n",
     "%pip install xgboost lightgbm\n",
     "\n",
     "# Encode target for XGBoost and LightGBM\n",
@@ -1418,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "193f7b60",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1414,6 @@
     "# XGBoost: Top 5 Features based on Gain\n",
     "import pandas as pd\n",
     "\n",
-    "# get_score returns dict like {'f0': gain0, 'f1': gain1, ...}\n",
     "gain_scores = best_xgb.get_booster().get_score(importance_type='gain')\n",
     "\n",
     "# Map f-index keys to feature_names created earlier\n",
@@ -1461,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "474aee8a",
    "metadata": {},
    "outputs": [
@@ -10675,12 +10647,10 @@
     }
    ],
    "source": [
-    "# LightGBM (with encoded labels)\n",
+    "# LightGBM \n",
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Use the same label encoder as XGBoost cell (already defined above)\n",
-    "# y_train_enc, y_val_enc, y_test_enc already exist\n",
     "\n",
     "def objective_lgbm(trial):\n",
     "    n_estimators = trial.suggest_int('n_estimators', 50, 300)\n",
@@ -10739,7 +10709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f5f05fee",
    "metadata": {},
    "outputs": [
@@ -10767,9 +10737,8 @@
     "lgb_gain = booster.feature_importance(importance_type='gain')\n",
     "\n",
     "# Map LightGBM's generic column names to actual feature names\n",
-    "# feature_names was created earlier when we built the feature list for the preprocessor\n",
     "lgb_gain_df = pd.DataFrame({\n",
-    "    'Feature': feature_names,  # Use our pre-defined feature_names list\n",
+    "    'Feature': feature_names,  \n",
     "    'Gain': lgb_gain\n",
     "}).sort_values('Gain', ascending=False)\n",
     "\n",
