--- a/models-smote+enn.ipynb
+++ b/models-smote+enn.ipynb
@@ -5,35 +5,12 @@
    "id": "96e3c905",
    "metadata": {},
    "source": [
-    "# Machine Learning Models Implementation\n",
-    "\n",
-    "This notebook implements several ML models based on the EDA and PCA results. The top 14 features identified after PCA are used for modeling. The workflow includes:\n",
-    "\n",
-    "- Data loading and preprocessing (scaling, one-hot encoding)\n",
-    "- Train/validation/test split (80/10/10)\n",
-    "- Model training and hyperparameter tuning using Optuna\n",
-    "- Models: Logistic Regression (Ridge & Lasso), Naive Bayes, Random Forest, SVM, Decision Tree\n",
-    "\n",
-    "**Top 14 Features:**\n",
-    "1. RiskScore\n",
-    "2. MonthlyCharges\n",
-    "3. AvgChargesPerMonth\n",
-    "4. ContractRisk\n",
-    "5. Contract\n",
-    "6. TotalServices\n",
-    "7. TotalCharges\n",
-    "8. EstimatedCLV\n",
-    "9. HasFamily\n",
-    "10. tenure\n",
-    "11. Partner\n",
-    "12. HighValueCustomer\n",
-    "13. PaymentRisk\n",
-    "14. Dependents"
+    "# Machine Learning Models Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4f229112",
    "metadata": {},
    "outputs": [
@@ -67,7 +44,6 @@
     "# Set constant seed for reproducibility\n",
     "SEED = 42\n",
     "np.random.seed(SEED)\n",
-    "# Remove optuna.seed(SEED) as it does not exist\n",
     "import warnings\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
@@ -126,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "25b056f9",
    "metadata": {},
    "outputs": [
@@ -164,9 +140,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# ============================================================\n",
-    "# 1. Global deterministic setup (must be at the very top)\n",
-    "# ============================================================\n",
     "\n",
     "SEED = 42\n",
     "\n",
@@ -182,9 +155,6 @@
     "os.environ[\"VECLIB_MAXIMUM_THREADS\"] = \"1\"\n",
     "os.environ[\"NUMEXPR_NUM_THREADS\"] = \"1\"\n",
     "\n",
-    "# ============================================================\n",
-    "# 2. Imports (after env vars)\n",
-    "# ============================================================\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
@@ -194,45 +164,29 @@
     "from imblearn.under_sampling import EditedNearestNeighbours\n",
     "from imblearn.pipeline import Pipeline as ImbPipeline\n",
     "\n",
-    "# (Optional) example model\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "# ============================================================\n",
-    "# 3. Load data and define features\n",
-    "# ============================================================\n",
     "\n",
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "\n",
     "X = df[features]\n",
-    "# Update if your target column has a different name\n",
     "y = df['Churn']\n",
     "\n",
     "categorical_cols = ['SeniorCitizen', 'PhoneService', 'TechSupport', 'OnlineSecurity', 'PaperlessBilling', 'PaymentMethod']\n",
     "numerical_cols = [col for col in features if col not in categorical_cols]\n",
     "\n",
-    "# ============================================================\n",
-    "# 4. Preprocessing pipeline (dense, deterministic)\n",
-    "# ============================================================\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numerical_cols),\n",
-    "        # For newer sklearn: sparse_output=False\n",
-    "        # For older: use sparse=False (you may get a warning on one of them, but it will still work)\n",
     "        ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False), categorical_cols)\n",
     "    ],\n",
     "    remainder='drop'\n",
     ")\n",
     "\n",
-    "# If you get an error about sparse_output, switch to:\n",
-    "# ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse=False), categorical_cols)\n",
-    "\n",
-    "# ============================================================\n",
-    "# 5. Train / val / test split (80 / 10 / 10)\n",
-    "# ============================================================\n",
     "\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
     "    X, y,\n",
@@ -248,9 +202,6 @@
     "    stratify=y_temp\n",
     ")\n",
     "\n",
-    "# ============================================================\n",
-    "# 6. Fit preprocessor ONLY on training, transform all splits\n",
-    "# ============================================================\n",
     "\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc   = preprocessor.transform(X_val)\n",
@@ -261,9 +212,6 @@
     "X_val_proc   = np.asarray(X_val_proc,   dtype=np.float64)\n",
     "X_test_proc  = np.asarray(X_test_proc,  dtype=np.float64)\n",
     "\n",
-    "# ============================================================\n",
-    "# 7. SMOTE + ENN on TRAINING DATA ONLY (deterministic)\n",
-    "# ============================================================\n",
     "\n",
     "print(\"Before SMOTE+ENN:\")\n",
     "print(y_train.value_counts())\n",
@@ -297,7 +245,6 @@
     "print(\"Class distribution:\")\n",
     "print(y_train_resampled.value_counts(normalize=True))\n",
     "\n",
-    "# Use these for training models\n",
     "X_train_proc = X_train_resampled\n",
     "y_train      = y_train_resampled"
    ]
@@ -1307,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "94e91a41",
    "metadata": {},
    "outputs": [
@@ -1404,8 +1351,6 @@
     }
    ],
    "source": [
-    "# XGBoost, LightGBM, and KNN with Optuna, validation split, and plots\n",
-    "# Install required packages if not already installed\n",
     "%pip install xgboost lightgbm\n",
     "\n",
     "# Encode target for XGBoost and LightGBM\n",
@@ -1485,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "69752ef5",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1453,6 @@
     "# XGBoost: Top 5 Features based on Gain\n",
     "import pandas as pd\n",
     "\n",
-    "# get_score returns dict like {'f0': gain0, 'f1': gain1, ...}\n",
     "gain_scores = best_xgb.get_booster().get_score(importance_type='gain')\n",
     "\n",
     "# Map f-index keys to feature_names created earlier\n",
@@ -1528,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "474aee8a",
    "metadata": {},
    "outputs": [
@@ -8364,8 +8308,6 @@
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Use the same label encoder as XGBoost cell (already defined above)\n",
-    "# y_train_enc, y_val_enc, y_test_enc already exist\n",
     "\n",
     "def objective_lgbm(trial):\n",
     "    n_estimators = trial.suggest_int('n_estimators', 50, 300)\n",
@@ -8424,7 +8366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4a381d05",
    "metadata": {},
    "outputs": [
@@ -8452,9 +8394,8 @@
     "lgb_gain = booster.feature_importance(importance_type='gain')\n",
     "\n",
     "# Map LightGBM's generic column names to actual feature names\n",
-    "# feature_names was created earlier when we built the feature list for the preprocessor\n",
     "lgb_gain_df = pd.DataFrame({\n",
-    "    'Feature': feature_names,  # Use our pre-defined feature_names list\n",
+    "    'Feature': feature_names,  \n",
     "    'Gain': lgb_gain\n",
     "}).sort_values('Gain', ascending=False)\n",
     "\n",
