--- a/models.ipynb
+++ b/models.ipynb
@@ -5,35 +5,12 @@
    "id": "96e3c905",
    "metadata": {},
    "source": [
-    "# Machine Learning Models Implementation\n",
-    "\n",
-    "This notebook implements several ML models based on the EDA and PCA results. The top 14 features identified after PCA are used for modeling. The workflow includes:\n",
-    "\n",
-    "- Data loading and preprocessing (scaling, one-hot encoding)\n",
-    "- Train/validation/test split (80/10/10)\n",
-    "- Model training and hyperparameter tuning using Optuna\n",
-    "- Models: Logistic Regression (Ridge & Lasso), Naive Bayes, Random Forest, SVM, Decision Tree\n",
-    "\n",
-    "**Top 14 Features:**\n",
-    "1. RiskScore\n",
-    "2. MonthlyCharges\n",
-    "3. AvgChargesPerMonth\n",
-    "4. ContractRisk\n",
-    "5. Contract\n",
-    "6. TotalServices\n",
-    "7. TotalCharges\n",
-    "8. EstimatedCLV\n",
-    "9. HasFamily\n",
-    "10. tenure\n",
-    "11. Partner\n",
-    "12. HighValueCustomer\n",
-    "13. PaymentRisk\n",
-    "14. Dependents"
+    "# Machine Learning Models Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4f229112",
    "metadata": {},
    "outputs": [
@@ -67,7 +44,6 @@
     "# Set constant seed for reproducibility\n",
     "SEED = 42\n",
     "np.random.seed(SEED)\n",
-    "# Remove optuna.seed(SEED) as it does not exist\n",
     "import warnings\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
     "\n",
@@ -114,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "30bb9c57",
    "metadata": {},
    "outputs": [],
@@ -124,7 +100,6 @@
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "X = df[features]\n",
-    "# Assuming target column is 'Churn' (update if different)\n",
     "y = df['Churn']"
    ]
   },
@@ -1195,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "94e91a41",
    "metadata": {},
    "outputs": [
@@ -1292,8 +1267,6 @@
     }
    ],
    "source": [
-    "# XGBoost, LightGBM, and KNN with Optuna, validation split, class weights, and plots\n",
-    "# Install required packages if not already installed\n",
     "%pip install xgboost lightgbm\n",
     "\n",
     "# Encode target for XGBoost and LightGBM\n",
@@ -1380,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "429f9a35",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1376,6 @@
     "# XGBoost: Top 5 Features based on Gain\n",
     "import pandas as pd\n",
     "\n",
-    "# get_score returns dict like {'f0': gain0, 'f1': gain1, ...}\n",
     "gain_scores = best_xgb.get_booster().get_score(importance_type='gain')\n",
     "\n",
     "# Map f-index keys to feature_names created earlier\n",
@@ -1423,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "474aee8a",
    "metadata": {},
    "outputs": [
@@ -5658,9 +5630,6 @@
     "from lightgbm import LGBMClassifier\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Use the same label encoder as XGBoost cell (already defined above)\n",
-    "# y_train_enc, y_val_enc, y_test_enc already exist\n",
-    "\n",
     "# Compute class weights for encoded labels\n",
     "classes_enc = np.unique(y_train_enc)\n",
     "class_weights_enc = compute_class_weight('balanced', classes=classes_enc, y=y_train_enc)\n",
@@ -5724,7 +5693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0cb17a28",
    "metadata": {},
    "outputs": [
@@ -5751,10 +5720,8 @@
     "booster = best_lgbm.booster_\n",
     "lgb_gain = booster.feature_importance(importance_type='gain')\n",
     "\n",
-    "# Map LightGBM's generic column names to actual feature names\n",
-    "# feature_names was created earlier when we built the feature list for the preprocessor\n",
     "lgb_gain_df = pd.DataFrame({\n",
-    "    'Feature': feature_names,  # Use our pre-defined feature_names list\n",
+    "    'Feature': feature_names,  \n",
     "    'Gain': lgb_gain\n",
     "}).sort_values('Gain', ascending=False)\n",
     "\n",
