--- a/tabTransformer-smote+enn.ipynb
+++ b/tabTransformer-smote+enn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -473,15 +473,10 @@
     }
    ],
    "source": [
-    "# ============================================\n",
-    "# Install dependencies\n",
-    "# ============================================\n",
     "%pip install optuna --quiet\n",
     "%pip install torch torchvision torchaudio --quiet\n",
     "\n",
-    "# ============================================\n",
-    "# Imports\n",
-    "# ============================================\n",
+    "\n",
     "import os\n",
     "os.environ[\"CUBLAS_WORKSPACE_CONFIG\"] = \":4096:8\"\n",
     "\n",
@@ -512,9 +507,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# ============================================\n",
-    "# Global seed & deterministic setup\n",
-    "# ============================================\n",
+    "\n",
     "SEED = 42\n",
     "\n",
     "os.environ[\"PYTHONHASHSEED\"] = str(SEED)\n",
@@ -530,7 +523,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
     "\n",
-    "# Try strict deterministic algorithms (may raise on some ops/versions)\n",
+    "# Try strict deterministic algorithms\n",
     "try:\n",
     "    torch.use_deterministic_algorithms(True)\n",
     "    print(\"Using strict deterministic algorithms in PyTorch.\")\n",
@@ -547,40 +540,28 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"Using device:\", device)\n",
     "\n",
-    "# ============================================\n",
-    "# Load dataset and feature selection\n",
-    "# ============================================\n",
+    "\n",
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "\n",
     "X = df[features]\n",
-    "# Update if your target column has a different name\n",
     "y = df['Churn']\n",
     "\n",
     "categorical_cols = ['SeniorCitizen', 'PhoneService', 'TechSupport', 'OnlineSecurity', 'PaperlessBilling', 'PaymentMethod']\n",
     "numerical_cols = [col for col in features if col not in categorical_cols]\n",
     "\n",
-    "# ============================================================\n",
-    "# 4. Preprocessing pipeline (dense, deterministic)\n",
-    "# ============================================================\n",
+    "\n",
     "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numerical_cols),\n",
-    "        # For newer sklearn: sparse_output=False\n",
-    "        # For older: use sparse=False (you may get a warning on one of them, but it will still work)\n",
     "        ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse_output=False), categorical_cols)\n",
     "    ],\n",
     "    remainder='drop'\n",
     ")\n",
     "\n",
-    "# If you get an error about sparse_output, switch to:\n",
-    "# ('cat', OneHotEncoder(drop='first', handle_unknown='ignore', sparse=False), categorical_cols)\n",
     "\n",
-    "# ============================================================\n",
-    "# 5. Train / val / test split (80 / 10 / 10)\n",
-    "# ============================================================\n",
     "\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
     "    X, y,\n",
@@ -602,22 +583,17 @@
     "    y_val = y_val.map({'No': 0, 'Yes': 1}).astype(int)\n",
     "    y_test = y_test.map({'No': 0, 'Yes': 1}).astype(int)\n",
     "\n",
-    "# ============================================================\n",
-    "# 6. Fit preprocessor ONLY on training, transform all splits\n",
-    "# ============================================================\n",
+    "\n",
     "\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc   = preprocessor.transform(X_val)\n",
     "X_test_proc  = preprocessor.transform(X_test)\n",
     "\n",
-    "# Ensure dense float64 (for stable KNN in SMOTE/ENN)\n",
     "X_train_proc = np.asarray(X_train_proc, dtype=np.float64)\n",
     "X_val_proc   = np.asarray(X_val_proc,   dtype=np.float64)\n",
     "X_test_proc  = np.asarray(X_test_proc,  dtype=np.float64)\n",
     "\n",
-    "# ============================================================\n",
-    "# 7. SMOTE + ENN on TRAINING DATA ONLY (deterministic)\n",
-    "# ============================================================\n",
+    "\n",
     "\n",
     "print(\"Before SMOTE+ENN:\")\n",
     "print(y_train.value_counts())\n",
@@ -651,13 +627,10 @@
     "print(\"Class distribution:\")\n",
     "print(y_train_resampled.value_counts(normalize=True))\n",
     "\n",
-    "# Use these for training models\n",
     "X_train_proc = X_train_resampled\n",
     "y_train      = y_train_resampled\n",
     "\n",
-    "# ============================================\n",
-    "# PyTorch Dataset / DataLoaders (deterministic)\n",
-    "# ============================================\n",
+    "\n",
     "class TabDataset(Dataset):\n",
     "    def __init__(self, X, y):\n",
     "        # Handle pandas DataFrame / Series or numpy arrays\n",
@@ -709,9 +682,7 @@
     "n_features = X_train_proc.shape[1]\n",
     "n_classes  = 2  # 0 = No, 1 = Yes\n",
     "\n",
-    "# ============================================\n",
     "# TabTransformer-like model (features as tokens)\n",
-    "# ============================================\n",
     "class TabTransformer(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -769,9 +740,7 @@
     "        logits = self.cls_head(h_pool)                   # (B, n_classes)\n",
     "        return logits\n",
     "\n",
-    "# ============================================\n",
     "# Training / evaluation helpers\n",
-    "# ============================================\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
     "def train_one_epoch(model, loader, optimizer, criterion):\n",
@@ -831,9 +800,7 @@
     "    f1 = f1_score(all_targets, all_preds, pos_label=1, zero_division=0)\n",
     "    return avg_loss, f1, all_targets, all_preds, all_probs\n",
     "\n",
-    "# ============================================\n",
-    "# Optuna objective for TabTransformer (deterministic)\n",
-    "# ============================================\n",
+    "# Optuna objective for TabTransformer \n",
     "PATIENCE = 5\n",
     "MAX_EPOCHS = 50\n",
     "\n",
@@ -931,9 +898,7 @@
     "\n",
     "best_model.load_state_dict(best_state_dict)\n",
     "\n",
-    "# ============================================\n",
     "# Evaluate on test set\n",
-    "# ============================================\n",
     "test_loss, test_f1, y_true, y_pred, y_proba = eval_model(best_model, test_loader, criterion)\n",
     "\n",
     "accuracy = (y_true == y_pred).mean()\n",
@@ -958,9 +923,7 @@
     "print(\"\\nConfusion Matrix:\")\n",
     "print(cm)\n",
     "\n",
-    "# ============================================\n",
     "# Plot Confusion Matrix\n",
-    "# ============================================\n",
     "plt.figure(figsize=(5,4))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
     "plt.title(\"TabTransformer Confusion Matrix (Test)\")\n",
@@ -968,9 +931,7 @@
     "plt.ylabel(\"Actual\")\n",
     "plt.show()\n",
     "\n",
-    "# ============================================\n",
     "# Plot ROC Curve\n",
-    "# ============================================\n",
     "fpr, tpr, _ = roc_curve(y_true, y_proba)\n",
     "plt.figure(figsize=(6,5))\n",
     "plt.plot(fpr, tpr, label=f\"AUC = {auc:.2f}\")\n",
