--- a/tabTransformer-oversampling.ipynb
+++ b/tabTransformer-oversampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -492,15 +492,11 @@
     }
    ],
    "source": [
-    "# ============================================\n",
-    "# Install dependencies\n",
-    "# ============================================\n",
+    "\n",
     "%pip install optuna --quiet\n",
     "%pip install torch torchvision torchaudio --quiet\n",
     "\n",
-    "# ============================================\n",
-    "# Imports\n",
-    "# ============================================\n",
+    "\n",
     "import os\n",
     "os.environ[\"CUBLAS_WORKSPACE_CONFIG\"] = \":4096:8\"\n",
     "\n",
@@ -528,9 +524,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# ============================================\n",
-    "# Global seed & deterministic setup\n",
-    "# ============================================\n",
+    "\n",
     "SEED = 42\n",
     "\n",
     "random.seed(SEED)\n",
@@ -545,7 +539,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
     "\n",
-    "# Try strict deterministic algorithms (may raise on some ops/versions)\n",
+    "# Try strict deterministic algorithms \n",
     "try:\n",
     "    torch.use_deterministic_algorithms(True)\n",
     "    print(\"Using strict deterministic algorithms in PyTorch.\")\n",
@@ -555,31 +549,25 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"Using device:\", device)\n",
     "\n",
-    "# ============================================\n",
-    "# Load dataset and feature selection\n",
-    "# ============================================\n",
+    "\n",
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "\n",
     "X = df[features]\n",
-    "y = df['Churn']  # adjust if your target column name differs\n",
+    "y = df['Churn']  \n",
     "\n",
     "# Identify categorical and numerical columns for preprocessing\n",
     "categorical_cols = ['SeniorCitizen', 'PhoneService', 'TechSupport', 'OnlineSecurity', 'PaperlessBilling', 'PaymentMethod']\n",
     "numerical_cols = [col for col in features if col not in categorical_cols]\n",
     "\n",
-    "# ============================================\n",
-    "# Preprocessing pipeline\n",
-    "# ============================================\n",
+    "\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', StandardScaler(), numerical_cols),\n",
     "    ('cat', OneHotEncoder(drop='first'), categorical_cols)\n",
     "])\n",
     "\n",
-    "# ============================================\n",
-    "# Train/validation/test split (80/10/10)\n",
-    "# ============================================\n",
+    "\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
     "    X, y, test_size=0.10, random_state=SEED, stratify=y\n",
     ")\n",
@@ -594,16 +582,12 @@
     "    y_val   = y_val.map(mapping).astype(int)\n",
     "    y_test  = y_test.map(mapping).astype(int)\n",
     "\n",
-    "# ============================================\n",
-    "# Fit preprocessor on ORIGINAL training data\n",
-    "# ============================================\n",
+    "\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc   = preprocessor.transform(X_val)\n",
     "X_test_proc  = preprocessor.transform(X_test)\n",
     "\n",
-    "# ============================================\n",
-    "# Random oversampling to balance classes (50/50)\n",
-    "# ============================================\n",
+    "\n",
     "print(\"Before oversampling:\")\n",
     "print(pd.Series(y_train).value_counts())\n",
     "print(pd.Series(y_train).value_counts(normalize=True))\n",
@@ -631,9 +615,7 @@
     "print(pd.Series(y_train).value_counts())\n",
     "print(pd.Series(y_train).value_counts(normalize=True))\n",
     "\n",
-    "# ============================================\n",
-    "# PyTorch Dataset / DataLoaders (deterministic)\n",
-    "# ============================================\n",
+    "\n",
     "class TabDataset(Dataset):\n",
     "    def __init__(self, X, y):\n",
     "        # Handle pandas DataFrame / Series or numpy arrays\n",
@@ -685,9 +667,7 @@
     "n_features = X_train_proc.shape[1]\n",
     "n_classes  = 2  # 0 = No, 1 = Yes\n",
     "\n",
-    "# ============================================\n",
     "# TabTransformer-like model (features as tokens)\n",
-    "# ============================================\n",
     "class TabTransformer(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -745,9 +725,7 @@
     "        logits = self.cls_head(h_pool)                   # (B, n_classes)\n",
     "        return logits\n",
     "\n",
-    "# ============================================\n",
-    "# Training / evaluation helpers\n",
-    "# ============================================\n",
+    "\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
     "def train_one_epoch(model, loader, optimizer, criterion):\n",
@@ -807,9 +785,7 @@
     "    f1 = f1_score(all_targets, all_preds, pos_label=1, zero_division=0)\n",
     "    return avg_loss, f1, all_targets, all_preds, all_probs\n",
     "\n",
-    "# ============================================\n",
-    "# Optuna objective for TabTransformer (deterministic)\n",
-    "# ============================================\n",
+    "\n",
     "PATIENCE = 5\n",
     "MAX_EPOCHS = 50\n",
     "\n",
@@ -907,9 +883,7 @@
     "\n",
     "best_model.load_state_dict(best_state_dict)\n",
     "\n",
-    "# ============================================\n",
-    "# Evaluate on test set\n",
-    "# ============================================\n",
+    "\n",
     "test_loss, test_f1, y_true, y_pred, y_proba = eval_model(best_model, test_loader, criterion)\n",
     "\n",
     "accuracy = (y_true == y_pred).mean()\n",
@@ -934,9 +908,7 @@
     "print(\"\\nConfusion Matrix:\")\n",
     "print(cm)\n",
     "\n",
-    "# ============================================\n",
-    "# Plot Confusion Matrix\n",
-    "# ============================================\n",
+    "\n",
     "plt.figure(figsize=(5,4))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
     "plt.title(\"TabTransformer Confusion Matrix (Test)\")\n",
@@ -944,9 +916,6 @@
     "plt.ylabel(\"Actual\")\n",
     "plt.show()\n",
     "\n",
-    "# ============================================\n",
-    "# Plot ROC Curve\n",
-    "# ============================================\n",
     "fpr, tpr, _ = roc_curve(y_true, y_proba)\n",
     "plt.figure(figsize=(6,5))\n",
     "plt.plot(fpr, tpr, label=f\"AUC = {auc:.2f}\")\n",
