--- a/tabTransformer.ipynb
+++ b/tabTransformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -526,15 +526,10 @@
     }
    ],
    "source": [
-    "# ============================================\n",
-    "# Install dependencies\n",
-    "# ============================================\n",
+    "\n",
     "%pip install optuna --quiet\n",
     "%pip install torch torchvision torchaudio --quiet\n",
     "\n",
-    "# ============================================\n",
-    "# Imports\n",
-    "# ============================================\n",
     "import os\n",
     "os.environ[\"CUBLAS_WORKSPACE_CONFIG\"] = \":4096:8\"\n",
     "\n",
@@ -562,9 +557,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# ============================================\n",
-    "# Global seed & deterministic setup\n",
-    "# ============================================\n",
+    "\n",
     "SEED = 42\n",
     "\n",
     "random.seed(SEED)\n",
@@ -579,7 +572,7 @@
     "torch.backends.cudnn.deterministic = True\n",
     "torch.backends.cudnn.benchmark = False\n",
     "\n",
-    "# Try strict deterministic algorithms (may raise on some ops/versions)\n",
+    "# Try strict deterministic algorithms\n",
     "try:\n",
     "    torch.use_deterministic_algorithms(True)\n",
     "    print(\"Using strict deterministic algorithms in PyTorch.\")\n",
@@ -589,31 +582,23 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(\"Using device:\", device)\n",
     "\n",
-    "# ============================================\n",
-    "# Load dataset and feature selection\n",
-    "# ============================================\n",
+    "\n",
     "features = ['RiskScore', 'MonthlyCharges', 'EstimatedCLV', 'tenure', 'ContractRisk', 'PaymentRisk', 'PhoneService', 'AvgChargesPerMonth', 'TechSupport', 'OnlineSecurity', 'TotalCharges', 'PaperlessBilling', 'PaymentMethod', 'SeniorCitizen']\n",
     "\n",
     "df = pd.read_csv('final_telco_engineered.csv')\n",
     "\n",
     "X = df[features]\n",
-    "y = df['Churn']  # adjust if your target column name differs\n",
+    "y = df['Churn']  \n",
     "\n",
     "# Identify categorical and numerical columns for preprocessing\n",
     "categorical_cols = ['SeniorCitizen', 'PhoneService', 'TechSupport', 'OnlineSecurity', 'PaperlessBilling', 'PaymentMethod']\n",
     "numerical_cols = [col for col in features if col not in categorical_cols]\n",
     "\n",
-    "# ============================================\n",
-    "# Preprocessing pipeline\n",
-    "# ============================================\n",
     "preprocessor = ColumnTransformer([\n",
     "    ('num', StandardScaler(), numerical_cols),\n",
     "    ('cat', OneHotEncoder(drop='first'), categorical_cols)\n",
     "])\n",
     "\n",
-    "# ============================================\n",
-    "# Train/validation/test split (80/10/10)\n",
-    "# ============================================\n",
     "X_temp, X_test, y_temp, y_test = train_test_split(\n",
     "    X, y, test_size=0.10, random_state=SEED, stratify=y\n",
     ")\n",
@@ -628,16 +613,12 @@
     "    y_val   = y_val.map(mapping).astype(int)\n",
     "    y_test  = y_test.map(mapping).astype(int)\n",
     "\n",
-    "# ============================================\n",
-    "# Fit preprocessor on ORIGINAL training data\n",
-    "# ============================================\n",
+    "\n",
     "X_train_proc = preprocessor.fit_transform(X_train)\n",
     "X_val_proc   = preprocessor.transform(X_val)\n",
     "X_test_proc  = preprocessor.transform(X_test)\n",
     "\n",
-    "# ============================================\n",
     "# Calculate class weights for imbalanced data\n",
-    "# ============================================\n",
     "print(\"Class distribution in training data:\")\n",
     "print(pd.Series(y_train).value_counts())\n",
     "print(pd.Series(y_train).value_counts(normalize=True))\n",
@@ -648,9 +629,7 @@
     "class_weights_tensor = torch.tensor(class_weights, dtype=torch.float32).to(device)\n",
     "print(f\"\\nClass weights: {class_weights}\")\n",
     "\n",
-    "# ============================================\n",
-    "# PyTorch Dataset / DataLoaders (deterministic)\n",
-    "# ============================================\n",
+    "\n",
     "class TabDataset(Dataset):\n",
     "    def __init__(self, X, y):\n",
     "        # Handle pandas DataFrame / Series or numpy arrays\n",
@@ -702,9 +681,7 @@
     "n_features = X_train_proc.shape[1]\n",
     "n_classes  = 2  # 0 = No, 1 = Yes\n",
     "\n",
-    "# ============================================\n",
     "# TabTransformer-like model (features as tokens)\n",
-    "# ============================================\n",
     "class TabTransformer(nn.Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -762,9 +739,7 @@
     "        logits = self.cls_head(h_pool)                   # (B, n_classes)\n",
     "        return logits\n",
     "\n",
-    "# ============================================\n",
-    "# Training / evaluation helpers\n",
-    "# ============================================\n",
+    "\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
     "def train_one_epoch(model, loader, optimizer, criterion):\n",
@@ -824,9 +799,7 @@
     "    f1 = f1_score(all_targets, all_preds, pos_label=1, zero_division=0)\n",
     "    return avg_loss, f1, all_targets, all_preds, all_probs\n",
     "\n",
-    "# ============================================\n",
-    "# Optuna objective for TabTransformer (deterministic)\n",
-    "# ============================================\n",
+    "\n",
     "PATIENCE = 5\n",
     "MAX_EPOCHS = 50\n",
     "\n",
@@ -924,9 +897,7 @@
     "\n",
     "best_model.load_state_dict(best_state_dict)\n",
     "\n",
-    "# ============================================\n",
-    "# Evaluate on test set\n",
-    "# ============================================\n",
+    "\n",
     "test_loss, test_f1, y_true, y_pred, y_proba = eval_model(best_model, test_loader, criterion)\n",
     "\n",
     "accuracy = (y_true == y_pred).mean()\n",
@@ -951,9 +922,7 @@
     "print(\"\\nConfusion Matrix:\")\n",
     "print(cm)\n",
     "\n",
-    "# ============================================\n",
-    "# Plot Confusion Matrix\n",
-    "# ============================================\n",
+    "\n",
     "plt.figure(figsize=(5,4))\n",
     "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
     "plt.title(\"TabTransformer Confusion Matrix (Test)\")\n",
@@ -961,9 +930,6 @@
     "plt.ylabel(\"Actual\")\n",
     "plt.show()\n",
     "\n",
-    "# ============================================\n",
-    "# Plot ROC Curve\n",
-    "# ============================================\n",
     "fpr, tpr, _ = roc_curve(y_true, y_proba)\n",
     "plt.figure(figsize=(6,5))\n",
     "plt.plot(fpr, tpr, label=f\"AUC = {auc:.2f}\")\n",
